--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>来自宇宙第一大天才的10年倒计时</title>
+<title>和宇宙第一超级无敌大天才大可爱的每一天</title>
 <style type="text/css">
-h1 {font-size:64px;}
+h1 {font-size:64x;}
 h2 {font-size:44px;}
 h3 {font-size:24px;}
 hr {border:0; height:2px; width:100%; background-color:#ffffff}
@@ -12,7 +12,7 @@ hr {border:0; height:2px; width:100%; background-color:#ffffff}
 </head>
 <body style="width:800px; height: 600px; margin:0 auto; background-position:center; background-size:cover;" background="background.jpg">
 <font color="#1E73BE">
-<h2>来自宇宙第一大天才的10年倒计时</h2>
+<h2>和宇宙第一超级无敌大天才大可爱的每一天</h2>
 <h3>大天鹅，我爱你！</h3>
 </font>
 <hr>
